# pmp-analytics

./: .gitignore  README.md  activity_request.py  adhoc_techs.py  awarxe_cleanup.py  check_masked.py  cloud_functions_sftp_backup.py  constants.py  delinquent_data_submitters.py  dhs_upload.py  download_file.py  error_pharmacies.py  exclude_ndcs.py  export_file.py  list_folders_in_drive.py  mm1.py  mm2.py  mu_extras.py  naloxone.py  new_unreg_pharmacists.py  new_unreg_presc.py  od.py  permit_inspection_licenses.py  pharm_clean.py  pharm_clean_new.py  pharmacy_deas_not_in_mp.py  prescriber_activity_request.py  pyproject.toml  requirements.txt  scorecard.py  sftp_backup.py  techs.py  test.py  threshold.py  unreg_pharmacists.py  unreg_presc.py  upload_sheet.py
3x3_report/: README.md  threshold.py
3x3_report/data/: README.md
adhoc/: README.md  techs.py
adhoc/data/: README.md
data/: README.md
dea_file/: README.md
dhs_upload/: README.md  dhs_upload.py
error_pharmacies/: README.md  error_pharmacies.py
error_pharmacies/data/: README.md
examples/: download_file.py  export_file.py  list_folders_in_drive.py  test.py  upload_sheet.py
exclude_ndcs/: README.md  exclude_ndcs.py
exclude_ndcs/data/: README.md  excluded_ndcs.csv
mm_phys_audit/: README.md  mm1.py  mm2.py
mm_phys_audit/data/: README.md
mu_extras/: README.md  mu_extras.py
mu_extras/data/: README.md
naloxone/: README.md  naloxone.py
naloxone/data/: README.md
not_in_violation/: README.md  not_in_violation.ipynb
not_in_violation/data/: README.md
pharmacy_cleanup/: README.md  pharm_clean.py
pharmacy_cleanup/data/: README.md
pharmacy_deas_not_in_mp/: README.md  pharmacy_deas_not_in_mp.py
pharmacy_deas_not_in_mp/data/: README.md
scorecard/: README.md  cloud_functions_scorecard.py  scorecard.py
sftp_backup/: README.md  cloud_functions_sftp_backup.py  pmp_sftp_backup.py  sftp_backup.py  vendor_sftp_backup.py
tests/: test_utils_auth.py  test_utils_deas.py  test_utils_drive.py  test_utils_tableau.py
tests/test_utils/: test_deas.py  test_drive.py  test_files.py  test_num_and_dt.py  test_tableau.py
unregistered_pharmacists/: README.md  unreg_pharmacists.py
unregistered_pharmacists/data/: README.md
unregistered_prescribers/: README.md  unreg_presc.py
unregistered_prescribers/data/: README.md
utils/: auth.py  awarxe.py  constants.py  deas.py  drive.py  email.py  files.py  num_and_dt.py  tableau.py
