[project]
name = "pmp-analytics"
version = "0.1.0"
description = "a repository of scripts for AZ pmp analytics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.12.1",
    "google-api-python-client>=2.157.0",
    "google-auth-oauthlib>=1.2.1",
    "google-cloud-pubsub>=2.27.2",
    "html5lib>=1.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lxml>=5.3.0",
    "nbconvert>=7.16.5",
    "pandas>=2.2.3",
    "paramiko>=3.5.0",
    "polars>=1.19.0",
    "pyarrow>=18.1.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "tableauserverclient>=0.35",
    "toml>=0.10.2",
    "tzdata>=2024.2",
    "xlsx2csv>=0.8.4",
    "xlsxwriter>=3.2.0",
]

[tool.ruff]
target-version='py313'

[tool.ruff.format]
quote-style = 'preserve'
indent-style = 'space'

[tool.basedpyright]
typeCheckingMode = 'standard'
